Fixed percentage formats for cv_scores

--- a/HomeworkProjects/Unit2/Lesson3/Project4/IterateAndEvaluateYourClassifier_Unit2Lession2Project4.ipynb
+++ b/HomeworkProjects/Unit2/Lesson3/Project4/IterateAndEvaluateYourClassifier_Unit2Lession2Project4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,19 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def return_diff_min_max_cv_score(cv_in):\n",
-    "    print(\"min cv_score is {}, and max is {}, and delta is {}\".format(cv_in.min(),\n",
+    "    print(\"min cv_score is {0:.4%}, and max is {1:.4%}, and delta is {2:.4%}\".format(cv_in.min(),\n",
     "                                                                      cv_in.max(), \n",
     "                                                                      cv_in.max()-cv_in.min()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
       "Testing on Sample: 0.8916008614501076\n",
       "[0.89784946 0.89426523 0.89426523 0.890681   0.89605735 0.89048474\n",
       " 0.88150808 0.89028777 0.88489209 0.89568345]\n",
-      "min cv_score is 0.881508078994614, and max is 0.8978494623655914, and delta is 0.016341383370977347\n"
+      "min cv_score is 88.1508%, and max is 89.7849%, and delta is 1.6341%\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
       " 0.89964158 0.9028777  0.88848921 0.90647482 0.88848921 0.89928058\n",
       " 0.88489209 0.89208633 0.89928058 0.89208633 0.88848921 0.89568345\n",
       " 0.88489209 0.90647482]\n",
-      "min cv_score is 0.8848920863309353, and max is 0.9107142857142857, and delta is 0.025822199383350397\n"
+      "min cv_score is 88.4892%, and max is 91.0714%, and delta is 2.5822%\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
       " 0.87455197 0.86330935 0.88489209 0.88489209 0.87410072 0.88129496\n",
       " 0.87410072 0.8705036  0.88129496 0.87769784 0.88489209 0.8705036\n",
       " 0.8705036  0.88129496]\n",
-      "min cv_score is 0.8633093525179856, and max is 0.8848920863309353, and delta is 0.021582733812949728\n"
+      "min cv_score is 86.3309%, and max is 88.4892%, and delta is 2.1583%\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
       " 0.89964158 0.9028777  0.91726619 0.92446043 0.89208633 0.91366906\n",
       " 0.9028777  0.89208633 0.88848921 0.89568345 0.89208633 0.88848921\n",
       " 0.89928058 0.9028777 ]\n",
-      "min cv_score is 0.8884892086330936, and max is 0.9244604316546763, and delta is 0.03597122302158273\n"
+      "min cv_score is 88.8489%, and max is 92.4460%, and delta is 3.5971%\n"
      ]
     }
    ],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
       " 0.90322581 0.90647482 0.88489209 0.87410072 0.86690647 0.92086331\n",
       " 0.88129496 0.9028777  0.89208633 0.89208633 0.88848921 0.89208633\n",
       " 0.88848921 0.89208633]\n",
-      "min cv_score is 0.8669064748201439, and max is 0.920863309352518, and delta is 0.0539568345323741\n"
+      "min cv_score is 86.6906%, and max is 92.0863%, and delta is 5.3957%\n"
      ]
     }
    ],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
       " 0.86738351 0.8705036  0.86690647 0.8705036  0.86690647 0.8705036\n",
       " 0.88129496 0.87769784 0.87410072 0.87410072 0.87769784 0.87769784\n",
       " 0.8705036  0.87410072]\n",
-      "min cv_score is 0.8637992831541219, and max is 0.8812949640287769, and delta is 0.01749568087465503\n"
+      "min cv_score is 86.3799%, and max is 88.1295%, and delta is 1.7496%\n"
      ]
     }
    ],
