Completed Unit 2 - Lesson 5 - Project 2 minor cleanup

--- a/HomeworkProjects/Unit2/Lesson5/Project2/ChallengeValidateLinearRegression.ipynb
+++ b/HomeworkProjects/Unit2/Lesson5/Project2/ChallengeValidateLinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -39,14 +39,13 @@
     ")\n",
     "\n",
     "# Non-DataScience/ML packages\n",
-    "import chardet\n",
     "import re\n",
     "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,50 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_suitable_variables():\n",
-    "    num_columns3 = num_columns\n",
-    "    cols3_orig = ['LarcenyTheft']\n",
-    "#     num_columns3.remove('Population')\n",
-    "    num_columns2 = ['PropertyCrime']\n",
-    "    max_r_squared = 0\n",
-    "    max_xy_pair = []\n",
-    "    max_xy_pair = []\n",
-    "    for Y_variable in num_columns2:\n",
-    "        if Y_variable != 'Population':\n",
-    "            Y = df[Y_variable].values.reshape(-1,1)\n",
-    "            print(\"Y variable is {}\".format(Y_variable))\n",
-    "            for col in num_columns:\n",
-    "                cols3 = cols3_orig\n",
-    "                if col != Y_variable:\n",
-    "                    cols3.append(col)\n",
-    "                    print(\"Now calculating with X = {}, and Y_variable={}\".format(cols3, Y_variable))\n",
-    "                    X = df[[cols3]]\n",
-    "                    regr.fit(X, Y)\n",
-    "                    # Inspect the results.\n",
-    "                    print('\\nCoefficients: \\n', regr.coef_)\n",
-    "                    print('\\nIntercept: \\n', regr.intercept_)\n",
-    "                    print('\\nR-squared:')\n",
-    "                    rs = regr.score(X,Y)\n",
-    "#                     print(\"rs is a {} type variable\".format(type(rs)))\n",
-    "#                     if max_r_squared == 0 or rs > max_r_squared:\n",
-    "#                         max_r_squared = rs.astype(type('float',(float,),{}))\n",
-    "#                         max_xy_pair[0] = Y_variable\n",
-    "#                         max_xy_pair[1] = col\n",
-    "                    print(regr.score(X, Y))\n",
-    "                    X = df[['Robbery','Burglary','Murder','Rape','LarcenyTheft','Arson']]\n",
-    "#     print(\"Golden Y variable={}, and X variable={}, and max_r_squared={}\".format(max_xy_pair[0],\n",
-    "#                                                                              max_xy_pair[1],\n",
-    "#                                                                              max_r_squared))\n",
-    "#     return max_xy_pair, max_r_squared"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,19 +139,12 @@
     "df[df['City'].str.contains('publish')]\n",
     "\n",
     "df = df[(df['City'].str.contains('figures shown') == False)] # We don't want any documentation rows\n",
-    "df = df[(df['City'].str.contains('publish') == False)]       # We don't want any other documentation rows\n",
-    "# df = df[(df['City'].str.contains('Los Angeles') == False)]       # Remove the outlier\n",
-    "\n",
-    "# All Rape1 values are false\n",
-    "# No Rape2 values are true\n",
-    "# Arson3 NaN's -> 161\n",
-    "# There are 161 NaN entries for Arson3\n",
-    "# Remove Los Angeles -- it's an outlier."
+    "df = df[(df['City'].str.contains('publish') == False)]       # We don't want any other documentation rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +391,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -504,10 +453,6 @@
     "X = df[['LarcenyTheft', 'MotorVehicleTheft','Rape','AggravatedAssault']] # 95-99%, with 4.2183% difference\n",
     "# X = df[['LarcenyTheft', 'MotorVehicleTheft','Rape','AggravatedAssault','Burglary']] # 100% and delta=0%!!!\n",
     "\n",
-    "\n",
-    "# X = df[['LarcenyTheft']]\n",
-    "\n",
-    "\n",
     "regr.fit(X, Y)\n",
     "\n",
     "# Inspect the results.\n",
@@ -527,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {
     "run_control": {
      "frozen": false,
