Fixed zip file name and location

--- a/HomeworkProjects/Unit3/Lesson2/Project5/RandomForestGuidedExample3.2.5.ipynb
+++ b/HomeworkProjects/Unit3/Lesson2/Project5/RandomForestGuidedExample3.2.5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -52,18 +52,18 @@
      "output_type": "stream",
      "text": [
       "We are working with 2015 Lending dataset from https://resources.lendingclub.com/LoanStats3d.csv\n",
-      "there are 421,095 entries in the data frame, with 111 columns, from data file: LoanStats3d.csv\n",
+      "there are 421,095 entries in the data frame, with 144 columns, from data file: LoanStats3d2015.csv.zip\n",
       "y2015 has 421095 rows.\n"
      ]
     }
    ],
    "source": [
     "path=\"../../../../Datafiles/LendingClub/\"\n",
-    "file = 'LoanStats3d.csv'\n",
+    "file = 'LoanStats3d2015.csv.zip'\n",
     "url = 'https://resources.lendingclub.com/LoanStats3d.csv'\n",
     "\n",
     "print(\"We are working with 2015 Lending dataset from {}\".format(url))\n",
-    "y2015 = pd.read_csv(path + file, header=1, skipfooter=4, sep=',', quotechar='\"', engine='python')\n",
+    "y2015 = pd.read_csv(path + file, header=1, skipfooter=4, sep=',', quotechar='\"', engine='python', compression='zip')\n",
     "print(\"there are {:,} entries in the data frame, with {} columns, from data file: {}\".format(len(y2015),\n",
     "                                                                                             len(y2015.columns),                                                                                            file))\n",
     "y2015.head(20)\n",
