Removed outstanding principal, and payment related columns.

--- a/HomeworkProjects/Unit3/Lesson2/Project5/RandomForestGuidedExample3.2.5.ipynb
+++ b/HomeworkProjects/Unit3/Lesson2/Project5/RandomForestGuidedExample3.2.5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
        "4                NaN                    NaN              NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2450,7 @@
        "421094              NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -2701,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3978,7 @@
        "421094              NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3989,7 +3989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -4014,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5130,7 +5130,7 @@
        "4                NaN                    NaN              NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5161,7 +5161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -5208,11 +5208,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0.98971814, 0.99102394, 0.99259101, 0.99313702, 0.99285205,\n",
-       "       0.99292313, 0.99361167, 0.99320794, 0.99380165, 0.99232888])"
+       "array([0.9896469 , 0.9909527 , 0.99197359, 0.99209214, 0.99301829,\n",
+       "       0.9932556 , 0.99349292, 0.99320794, 0.99261423, 0.99320762])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -5284,7 +5284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -5298,10 +5298,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9917477053871454"
+       "0.9919554969781166"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5316,7 +5316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5327,7 +5327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5357,147 +5357,147 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>recoveries</th>\n",
-       "      <td>12.453942</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>next_pymnt_d_May-2019</th>\n",
-       "      <td>12.050767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>collection_recovery_fee</th>\n",
-       "      <td>11.392310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>out_prncp_inv</th>\n",
-       "      <td>10.657822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_rec_prncp</th>\n",
-       "      <td>7.935822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>last_pymnt_amnt</th>\n",
-       "      <td>5.683507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>last_pymnt_d_Apr-2019</th>\n",
-       "      <td>4.674084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_pymnt</th>\n",
-       "      <td>2.880282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>funded_amnt</th>\n",
-       "      <td>2.839390</td>\n",
+       "      <td>15.698711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>out_prncp</th>\n",
-       "      <td>2.819022</td>\n",
+       "      <td>8.972966</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>term_ 36 months</th>\n",
-       "      <td>2.588912</td>\n",
+       "      <th>collection_recovery_fee</th>\n",
+       "      <td>7.993030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rec_prncp</th>\n",
+       "      <td>7.759095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>next_pymnt_d_May-2019</th>\n",
+       "      <td>7.260468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>out_prncp_inv</th>\n",
+       "      <td>6.894576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total_pymnt_inv</th>\n",
-       "      <td>2.397485</td>\n",
+       "      <td>5.514792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <td>2.037787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>int_rate</th>\n",
-       "      <td>1.753678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_rec_int</th>\n",
-       "      <td>1.675789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>installment</th>\n",
-       "      <td>1.495745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>debt_settlement_flag_Y</th>\n",
-       "      <td>1.345331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>debt_settlement_flag_N</th>\n",
-       "      <td>1.332695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>funded_amnt_inv</th>\n",
-       "      <td>1.017856</td>\n",
+       "      <th>last_pymnt_d_Apr-2019</th>\n",
+       "      <td>3.589984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>term_ 60 months</th>\n",
-       "      <td>0.985838</td>\n",
+       "      <td>3.535020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total_rec_late_fee</th>\n",
-       "      <td>0.532466</td>\n",
+       "      <th>term_ 36 months</th>\n",
+       "      <td>3.247253</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>last_credit_pull_d_Oct-2016</th>\n",
-       "      <td>0.492941</td>\n",
+       "      <th>total_pymnt</th>\n",
+       "      <td>3.114943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>last_pymnt_amnt</th>\n",
+       "      <td>2.794557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>last_credit_pull_d_Apr-2019</th>\n",
-       "      <td>0.465955</td>\n",
+       "      <td>2.294795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funded_amnt_inv</th>\n",
+       "      <td>2.184415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <td>1.906499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>debt_settlement_flag_N</th>\n",
+       "      <td>1.863897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <td>1.792672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>debt_settlement_flag_Y</th>\n",
+       "      <td>1.404294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rec_int</th>\n",
+       "      <td>0.878770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>last_credit_pull_d_Oct-2016</th>\n",
+       "      <td>0.871890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>installment</th>\n",
+       "      <td>0.846724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>int_rate</th>\n",
+       "      <td>0.632529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>settlement_status_ACTIVE</th>\n",
+       "      <td>0.563197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rec_late_fee</th>\n",
+       "      <td>0.386278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>last_credit_pull_d_Feb-2017</th>\n",
-       "      <td>0.396475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>annual_inc</th>\n",
-       "      <td>0.188875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>grade_F</th>\n",
-       "      <td>0.186939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>revol_bal</th>\n",
-       "      <td>0.179520</td>\n",
+       "      <td>0.202355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total_rev_hi_lim</th>\n",
-       "      <td>0.176010</td>\n",
+       "      <td>0.198734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>last_pymnt_d_Mar-2019</th>\n",
-       "      <td>0.169740</td>\n",
+       "      <th>last_pymnt_d_Feb-2019</th>\n",
+       "      <td>0.193899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <td>0.193211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_cur_bal</th>\n",
+       "      <td>0.184125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tot_hi_cred_lim</th>\n",
-       "      <td>0.165125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tot_cur_bal</th>\n",
-       "      <td>0.160581</td>\n",
+       "      <td>0.169338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mo_sin_old_rev_tl_op</th>\n",
-       "      <td>0.160076</td>\n",
+       "      <td>0.160444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>last_pymnt_d_Jan-2019</th>\n",
-       "      <td>0.159059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>grade_E</th>\n",
-       "      <td>0.156847</td>\n",
+       "      <th>grade_A</th>\n",
+       "      <td>0.159446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total_bc_limit</th>\n",
-       "      <td>0.153246</td>\n",
+       "      <td>0.151293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>total_il_high_credit_limit</th>\n",
-       "      <td>0.151284</td>\n",
+       "      <th>revol_bal</th>\n",
+       "      <td>0.147986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>annual_inc</th>\n",
+       "      <td>0.147935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>settlement_status_BROKEN</th>\n",
+       "      <td>0.142861</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5505,45 +5505,45 @@
       ],
       "text/plain": [
        "                             importance\n",
-       "recoveries                    12.453942\n",
-       "next_pymnt_d_May-2019         12.050767\n",
-       "collection_recovery_fee       11.392310\n",
-       "out_prncp_inv                 10.657822\n",
-       "total_rec_prncp                7.935822\n",
-       "last_pymnt_amnt                5.683507\n",
-       "last_pymnt_d_Apr-2019          4.674084\n",
-       "total_pymnt                    2.880282\n",
-       "funded_amnt                    2.839390\n",
-       "out_prncp                      2.819022\n",
-       "term_ 36 months                2.588912\n",
-       "total_pymnt_inv                2.397485\n",
-       "loan_amnt                      2.037787\n",
-       "int_rate                       1.753678\n",
-       "total_rec_int                  1.675789\n",
-       "installment                    1.495745\n",
-       "debt_settlement_flag_Y         1.345331\n",
-       "debt_settlement_flag_N         1.332695\n",
-       "funded_amnt_inv                1.017856\n",
-       "term_ 60 months                0.985838\n",
-       "total_rec_late_fee             0.532466\n",
-       "last_credit_pull_d_Oct-2016    0.492941\n",
-       "last_credit_pull_d_Apr-2019    0.465955\n",
-       "last_credit_pull_d_Feb-2017    0.396475\n",
-       "annual_inc                     0.188875\n",
-       "grade_F                        0.186939\n",
-       "revol_bal                      0.179520\n",
-       "total_rev_hi_lim               0.176010\n",
-       "last_pymnt_d_Mar-2019          0.169740\n",
-       "tot_hi_cred_lim                0.165125\n",
-       "tot_cur_bal                    0.160581\n",
-       "mo_sin_old_rev_tl_op           0.160076\n",
-       "last_pymnt_d_Jan-2019          0.159059\n",
-       "grade_E                        0.156847\n",
-       "total_bc_limit                 0.153246\n",
-       "total_il_high_credit_limit     0.151284"
+       "recoveries                    15.698711\n",
+       "out_prncp                      8.972966\n",
+       "collection_recovery_fee        7.993030\n",
+       "total_rec_prncp                7.759095\n",
+       "next_pymnt_d_May-2019          7.260468\n",
+       "out_prncp_inv                  6.894576\n",
+       "total_pymnt_inv                5.514792\n",
+       "last_pymnt_d_Apr-2019          3.589984\n",
+       "term_ 60 months                3.535020\n",
+       "term_ 36 months                3.247253\n",
+       "total_pymnt                    3.114943\n",
+       "last_pymnt_amnt                2.794557\n",
+       "last_credit_pull_d_Apr-2019    2.294795\n",
+       "funded_amnt_inv                2.184415\n",
+       "loan_amnt                      1.906499\n",
+       "debt_settlement_flag_N         1.863897\n",
+       "funded_amnt                    1.792672\n",
+       "debt_settlement_flag_Y         1.404294\n",
+       "total_rec_int                  0.878770\n",
+       "last_credit_pull_d_Oct-2016    0.871890\n",
+       "installment                    0.846724\n",
+       "int_rate                       0.632529\n",
+       "settlement_status_ACTIVE       0.563197\n",
+       "total_rec_late_fee             0.386278\n",
+       "last_credit_pull_d_Feb-2017    0.202355\n",
+       "total_rev_hi_lim               0.198734\n",
+       "last_pymnt_d_Feb-2019          0.193899\n",
+       "total_bal_ex_mort              0.193211\n",
+       "avg_cur_bal                    0.184125\n",
+       "tot_hi_cred_lim                0.169338\n",
+       "mo_sin_old_rev_tl_op           0.160444\n",
+       "grade_A                        0.159446\n",
+       "total_bc_limit                 0.151293\n",
+       "revol_bal                      0.147986\n",
+       "annual_inc                     0.147935\n",
+       "settlement_status_BROKEN       0.142861"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5554,7 +5554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5564,7 +5564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5573,7 +5573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -5607,11 +5607,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0.92729086, 0.92807276, 0.93011327, 0.92882926, 0.93165519,\n",
-       "       0.93274597, 0.93255438, 0.92789969, 0.92628479, 0.92742127])"
+       "array([0.92508252, 0.9253182 , 0.93087317, 0.92861553, 0.92861553,\n",
+       "       0.93065615, 0.93124822, 0.92816092, 0.92588107, 0.92704128])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5646,13 +5646,10 @@
     "# X = X[['out_prncp','collection_recovery_fee','recoveries','total_rec_prncp']] # 98% \n",
     "# X = X[['out_prncp','collection_recovery_fee']] # 93%!!! - 2 features predicting 93% of the model \n",
     "\n",
-    "X = X[['collection_recovery_fee','recoveries','total_rec_int',\n",
-    "       'term_ 60 months','funded_amnt','funded_amnt_inv','loan_amnt',\n",
-    "       'debt_settlement_flag_Y','settlement_status_COMPLETE','term_ 36 months',\n",
-    "       'last_credit_pull_d_Apr-2019','int_rate','debt_settlement_flag_N','last_credit_pull_d_Feb-2017',\n",
-    "       'total_rec_late_fee','settlement_status_ACTIVE','last_credit_pull_d_Oct-2016',\n",
-    "       'grade_A','revol_bal','annual_inc','tot_cur_bal',\n",
-    "       'tot_hi_cred_lim','total_bal_ex_mort','total_bc_limit']] # 93% -- no payment amount, or outstanding principal\n",
+    "X = X[['recoveries','total_rec_int','term_ 60 months','funded_amnt','funded_amnt_inv','loan_amnt',\n",
+    "       'term_ 36 months','last_credit_pull_d_Apr-2019','int_rate','last_credit_pull_d_Feb-2017',\n",
+    "       'total_rec_late_fee','last_credit_pull_d_Oct-2016','grade_A','revol_bal','annual_inc','tot_cur_bal',\n",
+    "       'tot_hi_cred_lim','total_bal_ex_mort','total_bc_limit']] # 92% -- no payment amount, or outstanding principal\n",
     "\n",
     "cross_val_score(rfc, X, Y, cv=10)"
    ]
